--- a/apps/argocd-setup.yaml
+++ b/apps/argocd-setup.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/afugazzotto/ged24-demo.git
     targetRevision: HEAD
-    path: ../resources/argocd-setup
+    path: resources/argocd-setup
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd-setup
