--- a/apps/argocd-setup.yaml
+++ b/apps/argocd-setup.yaml
@@ -12,7 +12,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd-setup
-  syncPolicy:
-    automated:
-      selfHeal: true
-      prune: true
+  # syncPolicy:
+  #   automated:
+  #     selfHeal: true
+  #     prune: true
