--- a/resources/argocd-setup/configmap.yaml
+++ b/resources/argocd-setup/configmap.yaml
@@ -24,11 +24,16 @@ data:
                 hs.message = condition.message
                 return hs
               end
+              if condition.type == "ChildResourcesHealthy" and condition.status == "Unknown" then
+                hs.status = "Degrade"
+                hs.message = condition.message
+                return hs
+              end
             end
           end
         end
         hs.status = "Progressing"
-        hs.message = "Waiting for certificate"
+        hs.message = "Waiting for Pipeline status"
         return hs
     numaplane.numaproj.io/ISBServiceRollout:
       health.lua: |
@@ -46,11 +51,16 @@ data:
                 hs.message = condition.message
                 return hs
               end
+              if condition.type == "ChildResourcesHealthy" and condition.status == "Unknown" then
+                hs.status = "Degrade"
+                hs.message = condition.message
+                return hs
+              end
             end
           end
         end
         hs.status = "Progressing"
-        hs.message = "Waiting for certificate"
+        hs.message = "Waiting for ISBService status"
         return hs
     numaplane.numaproj.io/NumaflowControllerRollout:
       health.lua: |
