--- a/resources/demo-app/pipelinerollout-pause.yaml
+++ b/resources/demo-app/pipelinerollout-pause.yaml
@@ -3,6 +3,8 @@
 # metadata:
 #   name: my-pipeline-pause
 #   namespace: demo-app
+#   annotations:
+#     argocd.argoproj.io/sync-wave: "3"
 # spec:
 #   pipeline:
 #     interStepBufferServiceName: my-isbsvc
