--- a/resources/demo-app/pipelinerollout.yaml
+++ b/resources/demo-app/pipelinerollout.yaml
@@ -3,6 +3,8 @@ kind: PipelineRollout
 metadata:
   name: my-pipeline
   namespace: demo-app
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
 spec:
   pipeline:
     interStepBufferServiceName: my-isbsvc
