--- a/resources/demo-app/pipelinerollout-other.yaml
+++ b/resources/demo-app/pipelinerollout-other.yaml
@@ -7,27 +7,28 @@ metadata:
     argocd.argoproj.io/sync-wave: "3"
 spec:
   pipeline:
-    interStepBufferServiceName: my-isbsvc
-    vertices:
-      - name: in
-        source:
-          generator:
-            rpu: 5
-            duration: 15s
-      - name: cat
-        udf:
-          builtin:
-            name: cat
-      - name: out
-        sink:
-          log: {}
-      - name: out2
-        sink:
-          log: {}
-    edges:
-      - from: in
-        to: cat
-      - from: cat
-        to: out
-      - from: cat
-        to: out2
+    spec:
+      interStepBufferServiceName: my-isbsvc
+      vertices:
+        - name: in
+          source:
+            generator:
+              rpu: 5
+              duration: 15s
+        - name: cat
+          udf:
+            builtin:
+              name: cat
+        - name: out
+          sink:
+            log: {}
+        - name: out2
+          sink:
+            log: {}
+      edges:
+        - from: in
+          to: cat
+        - from: cat
+          to: out
+        - from: cat
+          to: out2
