--- a/resources/demo-app/pipelinerollout.yaml
+++ b/resources/demo-app/pipelinerollout.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   pipeline:
     spec:
-      lifecycle:
-        desiredPhase: "Paused"
+      # lifecycle:
+      #   desiredPhase: "Paused"
       interStepBufferServiceName: my-isbsvc
       vertices:
         - name: in
