--- a/resources/argocd-setup/configmap.yaml
+++ b/resources/argocd-setup/configmap.yaml
@@ -24,7 +24,6 @@ data:
               end
             end
           end
-        
           if obj.metadata.generation == obj.status.observedGeneration then
             if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration)) or obj.status.phase == "Failed" then
               hs.status = "Degraded"
@@ -36,7 +35,11 @@ data:
               return hs
             elseif (pipelinePaused ~= {} and pipelinePaused.status == "True") and (obj.metadata.generation == pipelinePaused.observedGeneration) then
               hs.status = "Suspended"
-              hs.message = "Pipeline is paused"
+              if pipelinePaused.reason == "Pausing" then
+                hs.message = "Pipeline is pausing"
+              else
+                hs.message = "Pipeline is paused"
+              end
               return hs
             elseif (healthyCondition ~= {} and healthyCondition.status == "True") and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
               hs.status = "Healthy"
@@ -51,8 +54,8 @@ data:
 
     numaplane.numaproj.io/ISBServiceRollout:
       health.lua: |
-        hs = {}
-        healthyCondition = {}
+        local hs = {}
+        local healthyCondition = {}
         if obj.status ~= nil then
           if obj.status.conditions ~= nil then
             for i, condition in ipairs(obj.status.conditions) do
@@ -61,27 +64,30 @@ data:
               end
             end
           end
-        end
-        if obj.metadata.generation == obj.status.observedGeneration then
-          if healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) then
-            hs.status = "Healthy"
-            hs.message = healthyCondition.message
-            return hs
-          elseif (healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration)) or obj.status.phase == "Failed" then
-            hs.status = "Degraded"
-            hs.message = healthyCondition.message
-            return hs
+          if obj.metadata.generation == obj.status.observedGeneration then
+            if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration)) or obj.status.phase == "Failed" then
+              hs.status = "Degraded"
+              if obj.status.phase == "Failed" then
+                hs.message = obj.status.message
+              else
+                hs.message = healthyCondition.message
+              end
+              return hs
+            elseif healthyCondition ~= {} and healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
+              hs.status = "Healthy"
+              hs.message = healthyCondition.message
+              return hs
+            end
           end
         end
-
         hs.status = "Progressing"
         hs.message = "Waiting for ISBService status"
         return hs
 
     numaplane.numaproj.io/NumaflowControllerRollout:
       health.lua: |
-        hs = {}
-        healthyCondition = {}
+        local hs = {}
+        local healthyCondition = {}
         if obj.status ~= nil then
           if obj.status.conditions ~= nil then
             for i, condition in ipairs(obj.status.conditions) do
@@ -90,19 +96,22 @@ data:
               end
             end
           end
-        end
-        if obj.metadata.generation == obj.status.observedGeneration then
-          if healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) then
-            hs.status = "Healthy"
-            hs.message = healthyCondition.message
-            return hs
-          elseif (healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration)) or obj.status.phase == "Failed" then
-            hs.status = "Degraded"
-            hs.message = healthyCondition.message
-            return hs
+          if obj.metadata.generation == obj.status.observedGeneration then
+            if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration) and healthyCondition.reason == "Degraded") or obj.status.phase == "Failed" then
+              hs.status = "Degraded"
+              if obj.status.phase == "Failed" then
+                hs.message = obj.status.message
+              else
+                hs.message = healthyCondition.message
+              end
+              return hs
+            elseif healthyCondition ~= {} and healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
+              hs.status = "Healthy"
+              hs.message = healthyCondition.message
+              return hs
+            end
           end
         end
-
         hs.status = "Progressing"
         hs.message = "Waiting for NumaflowController status"
         return hs
