feat: add mvtx file
Signed-off-by: Dillen Padhiar <dillen_padhiar@intuit.com>

--- a/apps/argocd-setup.yaml
+++ b/apps/argocd-setup.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/afugazzotto/ged24-demo.git
+    repoURL: https://github.com/dpadhiar/ged24-demo.git
     targetRevision: HEAD
     path: resources/argocd-setup
   destination:
