--- a/resources/demo-app/monovertexrollout.yaml
+++ b/resources/demo-app/monovertexrollout.yaml
@@ -17,4 +17,4 @@ spec:
       sink:
         udsink:
           container:
-            image: quay.io/numaio/numaflow-java/simple-sink:stable
+            image: quay.io/numaio/numaflow-java/simple-sink:v0.0
