--- a/resources/demo-app/monovertexrollout.yaml
+++ b/resources/demo-app/monovertexrollout.yaml
@@ -9,7 +9,7 @@ spec:
       source:
         udsource:
           container:
-            image: quay.io/numaio/numaflow-java/source-simple-source:stable
+            image: bad-image
         # transformer is an optional container to do any transformation to the incoming data before passing to the sink
         transformer:
           container:
