--- a/resources/argocd-setup/configmap.yaml
+++ b/resources/argocd-setup/configmap.yaml
@@ -7,111 +7,205 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
 data:
-  resource.customizations: |
-    numaplane.numaproj.io/PipelineRollout:
-      health.lua: |
-        local hs = {}
-        local healthyCondition = {}
-        local pipelinePaused = {}
-        if obj.status ~= nil then
-          if obj.status.conditions ~= nil then
-            for i, condition in ipairs(obj.status.conditions) do
-              if condition.type == "ChildResourcesHealthy" then
-                healthyCondition = condition
-              end
-              if condition.type == "PipelinePausingOrPaused" then
-                pipelinePaused = condition
-              end
-            end
-          end
-          if obj.metadata.generation == obj.status.observedGeneration then
-            if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration)) or obj.status.phase == "Failed" then
-              hs.status = "Degraded"
-              if obj.status.phase == "Failed" then
-                hs.message = obj.status.message
-              else
-                hs.message = healthyCondition.message
-              end
-              return hs
-            elseif (pipelinePaused ~= {} and pipelinePaused.status == "True") and (obj.metadata.generation == pipelinePaused.observedGeneration) then
-              hs.status = "Suspended"
-              if pipelinePaused.reason == "Pausing" then
-                hs.message = "Pipeline is pausing"
-              else
-                hs.message = "Pipeline is paused"
-              end
-              return hs
-            elseif (healthyCondition ~= {} and healthyCondition.status == "True") and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
-              hs.status = "Healthy"
-              hs.message = healthyCondition.message
-              return hs
-            end
-          end
-        end
-        hs.status = "Progressing"
-        hs.message = "Waiting for Pipeline status"
-        return hs
+  #application.instanceLabelKey: applications.argoproj.io/app-name
+  resource.customizations.health.numaplane.numaproj.io_PipelineRollout: |
+    -- Remove this after releasing Argo CD 2.13. https://github.com/argoproj/argo-cd/pull/19077
+    local hs = {}
+    local healthyCondition = {}
+    local pipelinePaused = {}
 
-    numaplane.numaproj.io/ISBServiceRollout:
-      health.lua: |
-        local hs = {}
-        local healthyCondition = {}
-        if obj.status ~= nil then
-          if obj.status.conditions ~= nil then
-            for i, condition in ipairs(obj.status.conditions) do
-              if condition.type == "ChildResourcesHealthy" then
-                healthyCondition = condition
-              end
-            end
+    if obj.status ~= nil then
+      if obj.status.conditions ~= nil then
+        for i, condition in ipairs(obj.status.conditions) do
+          if condition.type == "ChildResourcesHealthy" then
+            healthyCondition = condition
           end
-          if obj.metadata.generation == obj.status.observedGeneration then
-            if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration)) or obj.status.phase == "Failed" then
-              hs.status = "Degraded"
-              if obj.status.phase == "Failed" then
-                hs.message = obj.status.message
-              else
-                hs.message = healthyCondition.message
-              end
-              return hs
-            elseif healthyCondition ~= {} and healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
-              hs.status = "Healthy"
-              hs.message = healthyCondition.message
-              return hs
-            end
+          if condition.type == "PipelinePausingOrPaused" then
+            pipelinePaused = condition
           end
         end
-        hs.status = "Progressing"
-        hs.message = "Waiting for ISBService status"
-        return hs
+      end
 
-    numaplane.numaproj.io/NumaflowControllerRollout:
-      health.lua: |
-        local hs = {}
-        local healthyCondition = {}
-        if obj.status ~= nil then
-          if obj.status.conditions ~= nil then
-            for i, condition in ipairs(obj.status.conditions) do
-              if condition.type == "ChildResourcesHealthy" then
-                healthyCondition = condition
-              end
-            end
+      if obj.metadata.generation == obj.status.observedGeneration then
+        if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration) and healthyCondition.reason == "PipelineFailed") or obj.status.phase == "Failed" then
+          hs.status = "Degraded"
+          if obj.status.phase == "Failed" then
+            hs.message = obj.status.message
+          else
+            hs.message = healthyCondition.message
           end
-          if obj.metadata.generation == obj.status.observedGeneration then
-            if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration) and healthyCondition.reason == "Degraded") or obj.status.phase == "Failed" then
-              hs.status = "Degraded"
-              if obj.status.phase == "Failed" then
-                hs.message = obj.status.message
-              else
-                hs.message = healthyCondition.message
-              end
-              return hs
-            elseif healthyCondition ~= {} and healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
-              hs.status = "Healthy"
-              hs.message = healthyCondition.message
-              return hs
-            end
+          return hs
+        elseif (pipelinePaused ~= {} and pipelinePaused.status == "True") and (obj.metadata.generation == pipelinePaused.observedGeneration) then
+          hs.status = "Suspended"
+          hs.message = pipelinePaused.message
+          return hs
+        elseif (healthyCondition ~= {} and healthyCondition.status == "True") and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
+          hs.status = "Healthy"
+          hs.message = healthyCondition.message
+          return hs
+        end
+      end
+    end
+
+    hs.status = "Progressing"
+    hs.message = "Waiting for Pipeline status"
+    return hs
+  resource.customizations.health.numaplane.numaproj.io_ISBServiceRollout: |
+    -- Remove this after releasing Argo CD 2.13. https://github.com/argoproj/argo-cd/pull/19077
+    local hs = {}
+    local healthyCondition = {}
+
+    if obj.status ~= nil then
+      if obj.status.conditions ~= nil then
+        for i, condition in ipairs(obj.status.conditions) do
+          if condition.type == "ChildResourcesHealthy" then
+            healthyCondition = condition
           end
         end
-        hs.status = "Progressing"
-        hs.message = "Waiting for NumaflowController status"
-        return hs
+      end
+
+      if obj.metadata.generation == obj.status.observedGeneration then
+        if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration) and healthyCondition.reason == "ISBSvcFailed") or obj.status.phase == "Failed" then
+          hs.status = "Degraded"
+          if obj.status.phase == "Failed" then
+            hs.message = obj.status.message
+          else
+            hs.message = healthyCondition.message
+          end
+          return hs
+        elseif healthyCondition ~= {} and healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
+          hs.status = "Healthy"
+          hs.message = healthyCondition.message
+          return hs
+        end
+      end
+    end
+
+    hs.status = "Progressing"
+    hs.message = "Waiting for ISBService status"
+    return hs
+  resource.customizations.health.numaplane.numaproj.io_NumaflowControllerRollout:
+    |
+    -- Remove this after releasing Argo CD 2.13. https://github.com/argoproj/argo-cd/pull/19077
+    local hs = {}
+    local healthyCondition = {}
+
+    if obj.status ~= nil then
+      if obj.status.conditions ~= nil then
+        for i, condition in ipairs(obj.status.conditions) do
+          if condition.type == "ChildResourcesHealthy" then
+            healthyCondition = condition
+          end
+        end
+      end
+
+      if obj.metadata.generation == obj.status.observedGeneration then
+        if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration) and healthyCondition.reason == "Degraded") or obj.status.phase == "Failed" then
+          hs.status = "Degraded"
+          if obj.status.phase == "Failed" then
+            hs.message = obj.status.message
+          else
+            hs.message = healthyCondition.message
+          end
+          return hs
+        elseif healthyCondition ~= {} and healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
+          hs.status = "Healthy"
+          hs.message = healthyCondition.message
+          return hs
+        end
+      end
+    end
+
+    hs.status = "Progressing"
+    hs.message = "Waiting for NumaflowController status"
+    return hs
+  resource.customizations.health.numaplane.numaproj.io_MonoVertexRollout: |
+    -- Remove this after releasing Argo CD 2.13. https://github.com/argoproj/argo-cd/pull/19688
+    local hs = {}
+    local healthyCondition = {}
+
+    if obj.status ~= nil then
+      if obj.status.conditions ~= nil then
+        for i, condition in ipairs(obj.status.conditions) do
+          if condition.type == "ChildResourcesHealthy" then
+            healthyCondition = condition
+          end
+        end
+      end
+
+      if obj.metadata.generation == obj.status.observedGeneration then
+        if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration) and healthyCondition.reason == "MonoVertexFailed") or obj.status.phase == "Failed" then
+          hs.status = "Degraded"
+          if obj.status.phase == "Failed" then
+            hs.message = obj.status.message
+          else
+            hs.message = healthyCondition.message
+          end
+          return hs
+        elseif healthyCondition ~= {} and healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
+          hs.status = "Healthy"
+          hs.message = healthyCondition.message
+          return hs
+        end
+      end
+    end
+
+    hs.status = "Progressing"
+    hs.message = "Waiting for MonoVertex status"
+    return hs
+  resource.customizations.actions.numaplane.numaproj.io_PipelineRollout: |
+    discovery.lua: |
+      local actions = {}
+      actions["pause"] = {["disabled"] = true}
+      actions["unpause"] = {["disabled"] = true}
+
+      local paused = false
+      if obj.spec.pipeline.spec.lifecycle ~= nil and obj.spec.pipeline.spec.lifecycle.desiredPhase ~= nil and obj.spec.pipeline.spec.lifecycle.desiredPhase == "Paused" then
+          paused = true
+      end
+      if paused then
+        actions["unpause"]["disabled"] = false
+      else
+        actions["pause"]["disabled"] = false
+      end
+      return actions
+    definitions:
+    - name: pause
+      action.lua: |
+        if obj.spec.pipeline.spec.lifecycle == nil then
+          obj.spec.pipeline.spec.lifecycle = {}
+        end
+        obj.spec.pipeline.spec.lifecycle.desiredPhase = "Paused"
+        return obj
+    - name: unpause
+      action.lua: |
+        obj.spec.pipeline.spec.lifecycle.desiredPhase = "Running"
+        return obj
+  resource.customizations.actions.numaplane.numaproj.io_MonoVertexRollout: |
+    discovery.lua: |
+      local actions = {}
+      actions["pause"] = {["disabled"] = true}
+      actions["unpause"] = {["disabled"] = true}
+
+      local paused = false
+      if obj.spec.monoVertex.spec.lifecycle ~= nil and obj.spec.monoVertex.spec.lifecycle.desiredPhase ~= nil and obj.spec.monoVertex.spec.lifecycle.desiredPhase == "Paused" then
+          paused = true
+      end
+      if paused then
+        actions["unpause"]["disabled"] = false
+      else
+        actions["pause"]["disabled"] = false
+      end
+      return actions
+    definitions:
+    - name: pause
+      action.lua: |
+        if obj.spec.monoVertex.spec.lifecycle == nil then
+          obj.spec.monoVertex.spec.lifecycle = {}
+        end
+        obj.spec.monoVertex.spec.lifecycle.desiredPhase = "Paused"
+        return obj
+    - name: unpause
+      action.lua: |
+        obj.spec.monoVertex.spec.lifecycle.desiredPhase = "Running"
+        return obj
