--- a/resources/argocd-setup/configmap.yaml
+++ b/resources/argocd-setup/configmap.yaml
@@ -170,7 +170,7 @@ data:
       else
         actions["pause"]["disabled"] = false
       end
-      if obj.status.upgradeInProgress == "PipelinePauseAndDrain"
+      if obj.status ~= nil and obj.status.upgradeInProgress == "PipelinePauseAndDrain"
         actions["allow-data-loss"]["disabled"] = false
       --[[
       if obj.annotations[] ~= nil and obj.annotations["numaplane.numaproj.io/allow-data-loss"] == "true"
