--- a/resources/demo-app/SlowPipeline.yaml
+++ b/resources/demo-app/SlowPipeline.yaml
@@ -23,30 +23,17 @@ spec:
             env:
               - name: NUMAFLOW_DEBUG
                 value: "true"
-        - name: cat
-          limits:
-            readBatchSize: 1
+        - name: cat-2
           scale:
             min: 1
             max: 1
-          udf:
-            container: 
-              image: quay.io/numaio/numaflow-go/map-cat-sleep:v1
-          containerTemplate:
-            env:
-              - name: NUMAFLOW_DEBUG
-                value: "true"
-        - name: cat-2
           udf:
             builtin:
               name: cat
-          scale:
-            min: 1
           containerTemplate:
             env:
               - name: NUMAFLOW_DEBUG
                 value: "true"
-            max: 1
         - name: out
           sink:
             log: {}
@@ -55,8 +42,10 @@ spec:
             max: 1
       edges:
         - from: in
-          to: cat
-        - from: cat
           to: cat-2
+        #- from: cat
+        #  to: cat-2
+        #- from: cat-2
+        #  to: out
         - from: cat-2
           to: out
