turn off automatic syncing
Signed-off-by: Julie Vogelman <julievogelman0@gmail.com>

--- a/apps/demo-app.yaml
+++ b/apps/demo-app.yaml
@@ -14,5 +14,5 @@ spec:
     namespace: demo-app
   syncPolicy:
     automated:
-      selfHeal: true
-      prune: true
+      #selfHeal: true
+      #prune: true
