update namespace to example-namespace for Numaflow Controller Rollout
Signed-off-by: Julie Vogelman <julievogelman0@gmail.com>

--- a/resources/demo-app/numaflowcontrollerrollout.yaml
+++ b/resources/demo-app/numaflowcontrollerrollout.yaml
@@ -2,7 +2,7 @@ apiVersion: numaplane.numaproj.io/v1alpha1
 kind: NumaflowControllerRollout
 metadata:
   name: numaflow-controller
-  namespace: demo-app
+  namespace: example-namespace
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 spec:
