update pipelinerollout health status
Signed-off-by: Julie Vogelman <julievogelman0@gmail.com>

--- a/resources/argocd-setup/configmap.yaml
+++ b/resources/argocd-setup/configmap.yaml
@@ -14,6 +14,24 @@ data:
     local healthyCondition = {}
     local pipelinePaused = {}
 
+    if obj.metadata.generation ~= obj.status.observedGeneration then
+      hs.status = "Progressing"
+      hs.message = "not yet reconciled"
+      return hs
+    end
+
+    if obj.status ~= nil and obj.status.phase == "Pending" then
+      hs.status = "Progressing"
+      hs.message = "phase=Pending"
+      return hs
+    end
+
+    if obj.status ~= nil and obj.status.upgradeInProgress ~= nil and obj.status.upgradeInProgress ~= "" then
+      hs.status = "Progressing"
+      hs.message = "update in progress"
+      return hs
+    end
+
     if obj.status ~= nil then
       if obj.status.conditions ~= nil then
         for i, condition in ipairs(obj.status.conditions) do
@@ -26,28 +44,28 @@ data:
         end
       end
 
-      if obj.metadata.generation == obj.status.observedGeneration then
-        if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration) and healthyCondition.reason == "PipelineFailed") or obj.status.phase == "Failed" then
-          hs.status = "Degraded"
-          if obj.status.phase == "Failed" then
-            hs.message = obj.status.message
-          else
-            hs.message = healthyCondition.message
-          end
-          return hs
-        elseif (pipelinePaused ~= {} and pipelinePaused.status == "True") and (obj.metadata.generation == pipelinePaused.observedGeneration) then
-          hs.status = "Suspended"
-          hs.message = pipelinePaused.message
-          return hs
-        elseif (healthyCondition ~= {} and healthyCondition.status == "True") and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
-          hs.status = "Healthy"
+      
+      if (healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "PipelineFailed") or obj.status.phase == "Failed" then
+        hs.status = "Degraded"
+        if obj.status.phase == "Failed" then
+          hs.message = obj.status.message
+        else
           hs.message = healthyCondition.message
-          return hs
         end
+        return hs
+      elseif (pipelinePaused ~= {} and pipelinePaused.status == "True") then
+        hs.status = "Suspended"
+        hs.message = pipelinePaused.message
+        return hs
+      elseif (healthyCondition ~= {} and healthyCondition.status == "True") and obj.status.phase == "Deployed" then
+        hs.status = "Healthy"
+        hs.message = healthyCondition.message
+        return hs
       end
     end
+    
 
-    hs.status = "Progressing"
+    hs.status = "Unknown"
     hs.message = "Waiting for Pipeline status"
     return hs
   resource.customizations.health.numaplane.numaproj.io_ISBServiceRollout: |
@@ -65,7 +83,7 @@ data:
       end
 
       if obj.metadata.generation == obj.status.observedGeneration then
-        if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration) and healthyCondition.reason == "ISBSvcFailed") or obj.status.phase == "Failed" then
+        if (healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "ISBSvcFailed") or obj.status.phase == "Failed" then
           hs.status = "Degraded"
           if obj.status.phase == "Failed" then
             hs.message = obj.status.message
@@ -73,7 +91,7 @@ data:
             hs.message = healthyCondition.message
           end
           return hs
-        elseif healthyCondition ~= {} and healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
+        elseif healthyCondition ~= {} and healthyCondition.status == "True" and obj.status.phase == "Deployed" then
           hs.status = "Healthy"
           hs.message = healthyCondition.message
           return hs
@@ -100,7 +118,7 @@ data:
       end
 
       if obj.metadata.generation == obj.status.observedGeneration then
-        if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration) and healthyCondition.reason == "Degraded") or obj.status.phase == "Failed" then
+        if (healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "Degraded") or obj.status.phase == "Failed" then
           hs.status = "Degraded"
           if obj.status.phase == "Failed" then
             hs.message = obj.status.message
@@ -108,7 +126,7 @@ data:
             hs.message = healthyCondition.message
           end
           return hs
-        elseif healthyCondition ~= {} and healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
+        elseif healthyCondition ~= {} and healthyCondition.status == "True" and obj.status.phase == "Deployed" then
           hs.status = "Healthy"
           hs.message = healthyCondition.message
           return hs
@@ -134,7 +152,7 @@ data:
       end
 
       if obj.metadata.generation == obj.status.observedGeneration then
-        if (healthyCondition ~= {} and healthyCondition.status == "False" and (obj.metadata.generation == healthyCondition.observedGeneration) and healthyCondition.reason == "MonoVertexFailed") or obj.status.phase == "Failed" then
+        if (healthyCondition ~= {} and healthyCondition.status == "False" and healthyCondition.reason == "MonoVertexFailed") or obj.status.phase == "Failed" then
           hs.status = "Degraded"
           if obj.status.phase == "Failed" then
             hs.message = obj.status.message
@@ -142,7 +160,7 @@ data:
             hs.message = healthyCondition.message
           end
           return hs
-        elseif healthyCondition ~= {} and healthyCondition.status == "True" and (obj.metadata.generation == healthyCondition.observedGeneration) and obj.status.phase == "Deployed" then
+        elseif healthyCondition ~= {} and healthyCondition.status == "True" and obj.status.phase == "Deployed" then
           hs.status = "Healthy"
           hs.message = healthyCondition.message
           return hs
